Updated notebook instructions

--- a/Code/Data Discovery.ipynb
+++ b/Code/Data Discovery.ipynb
@@ -170,16 +170,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "1bbf6365-71fc-4499-8a14-ce07ae1351b8",
-   "metadata": {
-    "user_expressions": []
-   },
-   "source": [
-    "**Notice** that only 10 collections are returned here, but the `LPCLOUD` provider has over 100 data products available in Earthdata Cloud. This is because the CMR STAC API returns 10 collections by default. A `limit` parameter can be added to the end of the `LPCLOUD` STAC API endpoint to increase the number of collections returned at one time, but this can sometimes be time consuming. Here we'll loop through each `next` page link to make a seperate request for the next 10 collections from each available page."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "99a517eb-e7fd-44c2-b9fd-e6f35d81e46e",
@@ -366,8 +356,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#date_range = \"2021-05-01T00:00:00Z/2021-08-30T23:59:59Z\"    # closed interval\n",
-    "#date_range = \"2021-05-01T00:00:00Z/..\"                      # open interval - does not currently work with the CMR-STAC API\n",
     "date_range = \"2019-07/2019-08\""
    ]
   },
@@ -507,9 +495,7 @@
     "user_expressions": []
    },
    "source": [
-    "### Filtering STAC Items\n",
-    "\n",
-    "While the CMR-STAC API is a powerful search and discovery utility, it is still maturing and currently does not have the full gamut of filtering capabilities that the STAC API specification allows for. Hence, additional filtering is required if we want to filter by a property like cloud cover for example. Below we will loop through and filter the item_collection by a specified cloud cover as well as extract the band we need to do an Enhanced Vegetation Index (EVI) calculation later."
+    "### Filtering STAC Items"
    ]
   },
   {
@@ -549,8 +535,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# s30_bands = ['B03', 'B11']#, 'Fmask']    # S30 bands for EVI calculation and quality filtering -> GREEN, SWIR 1, Quality (?)\n",
-    "# l30_bands = ['B03', 'B06']#, 'Fmask']    # L30 bands for EVI calculation and quality filtering -> GREEN, SWIR 1, Quality (?)\n",
     "s30_bands = ['B02', 'B04']\n",
     "l30_bands = ['B02', 'B04']"
    ]
@@ -592,52 +576,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "infectious-premiere",
-   "metadata": {
-    "user_expressions": []
-   },
-   "source": [
-    "The filtering done in the previous steps produces a list of links to STAC Assets. Let's print out the first ten links."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "japanese-force",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "evi_band_links[:20]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "instructional-prime",
-   "metadata": {
-    "user_expressions": []
-   },
-   "source": [
-    "**NOTICE** that in the list of links that we have multiple tiles, i.e. **T14TKL** & **T13TGF**, that intersect with our region of interest. These tiles represent neighboring UTM zones. We will split the list of links into seperate lists for each tile."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "killing-shareware",
-   "metadata": {
-    "user_expressions": []
-   },
-   "source": [
-    "We now have a list of links to data assets that meet our search and filtering criteria. The commands that follow will split this list into logical groupings using python routines."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "approximate-massachusetts",
    "metadata": {
     "user_expressions": []
    },
    "source": [
-    "### Split Data Links List into Logical Groupings"
+    "### Split Data Links List into Logical Groupings\n",
+    "Open Sentinel Hub, select “Harmonized Landsat Sentinel” checkbox on the left, change the cloud cover slider to something like < 20%. Then you can find a region you want with different UTM tile.\n",
+    "eg. s3://lp-prod-protected/HLSS30.020/HLS.S30.T10SEF.2024102T185919.v2.0, where UTM tile is 'T10SEF'and you want to split the links by the tiles you want.\n"
    ]
   },
   {
@@ -647,7 +593,7 @@
     "user_expressions": []
    },
    "source": [
-    "Split by Universal Transverse Mercator (UTM) tile specified in the file name (e.g., T14TKL & T13TGF)"
+    "Split by Universal Transverse Mercator (UTM) tile specified in the file name (e.g., T11SLB)"
    ]
   },
   {
@@ -732,7 +678,7 @@
     "user_expressions": []
    },
    "source": [
-    "#### Print band/layer links for HLS tile T13TGF"
+    "#### Print band/layer links for HLS tile T11SLB"
    ]
   },
   {
@@ -788,25 +734,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "adjustable-income",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# bands_dicts['B03']"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "ceramic-justice",
    "metadata": {
     "user_expressions": []
    },
    "source": [
-    "### Save links to a text file\n",
-    "\n",
-    "To finish off this exercise, we will save the idividual link lists as seperate text files with descriptive names."
+    "### Save links to a text file\n"
    ]
   },
   {
@@ -816,7 +750,8 @@
     "user_expressions": []
    },
    "source": [
-    "#### Write links from CMR-STAC API to a file"
+    "#### Write links from CMR-STAC API to a file\n",
+    "Note: Write the file by changing the file path to your own directory."
    ]
   },
   {
@@ -868,61 +803,6 @@
     "        for l in v:\n",
     "            s3l = l.replace('https://data.lpdaac.earthdatacloud.nasa.gov/', 's3://')\n",
     "            f.write(f\"{s3l}\" + '\\n')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "assured-money",
-   "metadata": {
-    "user_expressions": []
-   },
-   "source": [
-    "---"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "necessary-subscriber",
-   "metadata": {
-    "user_expressions": []
-   },
-   "source": [
-    "## Resources\n",
-    "\n",
-    "- https://github.com/nasa/cmr-stac\n",
-    "- https://stacspec.org/\n",
-    "- https://stackoverflow.com/questions/26367812/appending-to-list-in-python-dictionary\n",
-    "- https://pystac-client.readthedocs.io/en/latest/index.html\n",
-    "- https://pystac.readthedocs.io/en/1.0/"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f0ebf970-a928-4b6a-af09-59ba0e519493",
-   "metadata": {
-    "user_expressions": []
-   },
-   "source": [
-    "---"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "95069f52",
-   "metadata": {
-    "tags": [],
-    "user_expressions": []
-   },
-   "source": [
-    "## Contact Info:  \n",
-    "\n",
-    "Email: LPDAAC@usgs.gov  \n",
-    "Voice: +1-866-573-3222  \n",
-    "Organization: Land Processes Distributed Active Archive Center (LP DAAC)¹  \n",
-    "Website: <https://lpdaac.usgs.gov/>  \n",
-    "Date last modified: 03-09-2023  \n",
-    "\n",
-    "¹Work performed under USGS contract G15PD00467 for NASA contract NNG14HH33I.  "
    ]
   }
  ],
