--- a/Code/RF_data_preparation.ipynb
+++ b/Code/RF_data_preparation.ipynb
@@ -7,7 +7,8 @@
     "user_expressions": []
    },
    "source": [
-    "# Random Forest Data Preparation"
+    "# Random Forest Data Preparation\n",
+    "We prepare the random forest data as a csv with the band and lidar data as follows."
    ]
   },
   {
@@ -166,6 +167,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "69bc5f6a",
+   "metadata": {},
+   "source": [
+    "Process the bands as per [SnowIndexing](SnowIndexing.ipynb)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "4764a994-7b8b-4657-b4b0-23c3d3feda73",
@@ -253,27 +262,15 @@
     "        writer.writerow(labels)\n",
     "\n",
     "        # Writing data row by row\n",
-    "        writer.writerows(data)\n",
-    "#     # Extract data and attributes\n",
-    "#     data = []\n",
-    "#     attributes = []\n",
-    "\n",
-    "#     for xarray in xarrays:\n",
-    "#         data.append(xarray.values.flatten())\n",
-    "#         attributes.append(xarray.attrs.get('long_name', ''))\n",
-    "\n",
-    "#     # Transpose data for CSV writing\n",
-    "#     data_transposed = zip(*data)\n",
-    "\n",
-    "#     # Write to CSV file\n",
-    "#     with open(file_name, 'w', newline='') as csvfile:\n",
-    "#         writer = csv.writer(csvfile)\n",
-    "        \n",
-    "#         # Write attribute row\n",
-    "#         writer.writerow(attributes)\n",
-    "        \n",
-    "#         # Write data rows\n",
-    "#         writer.writerows(data_transposed)"
+    "        writer.writerows(data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8e85df6b",
+   "metadata": {},
+   "source": [
+    "Make sure the order of the labels and the bands are correct"
    ]
   },
   {
