update threshold to 0.1(10cm)

--- a/Code/RF_Model.ipynb
+++ b/Code/RF_Model.ipynb
@@ -119,6 +119,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "91d9904e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Make predictions on the test data\n",
+    "y_pred_train = model.predict(X_train)\n",
+    "\n",
+    "# Compute the confusion matrix\n",
+    "cm_train = classification_report(y_train, y_pred_train)\n",
+    "\n",
+    "print(cm)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "a9481a7f",
    "metadata": {},
