Fixed bug in whole image, and made it easier to work with

--- a/Code/RF_data_preparation.ipynb
+++ b/Code/RF_data_preparation.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 85,
    "id": "dc4bead5-8380-43a3-9d6d-4480cd432a58",
    "metadata": {
     "tags": []
@@ -760,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 86,
    "id": "09197c0e-bb94-439a-a029-c12031a6493a",
    "metadata": {
     "tags": []
@@ -769,10 +769,10 @@
     {
      "data": {
       "text/plain": [
-       "<rasterio.env.Env at 0x7f056b047e10>"
+       "<rasterio.env.Env at 0x7f56e32e7110>"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -806,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 95,
    "id": "df5cba45-01ba-4cd4-b82a-3aa6f509daae",
    "metadata": {
     "tags": []
@@ -816,64 +816,71 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "s3://lp-prod-protected/HLSS30.020/HLS.S30.T11SLB.2019182T183929.v2.0/HLS.S30.T11SLB.2019182T183929.v2.0.B02.tif\n",
-      "s3://lp-prod-protected/HLSS30.020/HLS.S30.T11SLB.2019182T183929.v2.0/HLS.S30.T11SLB.2019182T183929.v2.0.B03.tif\n",
-      "s3://lp-prod-protected/HLSS30.020/HLS.S30.T11SLB.2019182T183929.v2.0/HLS.S30.T11SLB.2019182T183929.v2.0.B04.tif\n",
-      "s3://lp-prod-protected/HLSL30.020/HLS.L30.T11SLB.2019189T183338.v2.0/HLS.L30.T11SLB.2019189T183338.v2.0.B06.tif\n",
-      "s3://lp-prod-protected/HLSS30.020/HLS.S30.T11SLB.2019182T183929.v2.0/HLS.S30.T11SLB.2019182T183929.v2.0.B11.tif\n"
+      "s3://lp-prod-protected/HLSS30.020/HLS.S30.T10TEL.2023042T190521.v2.0/HLS.S30.T10TEL.2023042T190521.v2.0.B02.tif\n",
+      "s3://lp-prod-protected/HLSS30.020/HLS.S30.T10TEL.2023042T190521.v2.0/HLS.S30.T10TEL.2023042T190521.v2.0.B03.tif\n",
+      "s3://lp-prod-protected/HLSS30.020/HLS.S30.T10TEL.2023042T190521.v2.0/HLS.S30.T10TEL.2023042T190521.v2.0.B04.tif\n",
+      "s3://lp-prod-protected/HLSS30.020/HLS.S30.T10TEL.2023042T190521.v2.0/HLS.S30.T10TEL.2023042T190521.v2.0.B11.tif\n",
+      ".\n"
      ]
     }
    ],
    "source": [
     "links = {}\n",
-    "# links[\"02\"] = ['s3://lp-prod-protected/HLSS30.020/HLS.S30.T10TEL.2023042T190521.v2.0/HLS.S30.T10TEL.2023042T190521.v2.0.B02.tif']\n",
-    "# links[\"03\"] = ['s3://lp-prod-protected/HLSS30.020/HLS.S30.T10TEL.2023042T190521.v2.0/HLS.S30.T10TEL.2023042T190521.v2.0.B03.tif']\n",
-    "# links[\"04\"] = ['s3://lp-prod-protected/HLSS30.020/HLS.S30.T10TEL.2023042T190521.v2.0/HLS.S30.T10TEL.2023042T190521.v2.0.B04.tif']\n",
-    "# links[\"11\"] = ['s3://lp-prod-protected/HLSS30.020/HLS.S30.T10TEL.2023042T190521.v2.0/HLS.S30.T10TEL.2023042T190521.v2.0.B11.tif']\n",
-    "links[\"02\"] = open('../data/S3_T11SLB_B02_Links.txt').read().splitlines() # L30 and S30 for BLUE\n",
-    "links[\"03\"] = open('../data/S3_T11SLB_B03_Links.txt').read().splitlines() # L30 and S30 for GREEN\n",
-    "links[\"04\"] = open('../data/S3_T11SLB_B04_Links.txt').read().splitlines() # L30 and S30 for RED\n",
-    "links[\"06\"] = open('../data/S3_T11SLB_B06_Links.txt').read().splitlines() # L30 for SWIR 1\n",
-    "links[\"11\"] = open('../data/S3_T11SLB_B11_Links.txt').read().splitlines() # S30 for SWIR 1\n",
+    "links[\"02\"] = ['s3://lp-prod-protected/HLSS30.020/HLS.S30.T10TEL.2023042T190521.v2.0/HLS.S30.T10TEL.2023042T190521.v2.0.B02.tif']\n",
+    "links[\"03\"] = ['s3://lp-prod-protected/HLSS30.020/HLS.S30.T10TEL.2023042T190521.v2.0/HLS.S30.T10TEL.2023042T190521.v2.0.B03.tif']\n",
+    "links[\"04\"] = ['s3://lp-prod-protected/HLSS30.020/HLS.S30.T10TEL.2023042T190521.v2.0/HLS.S30.T10TEL.2023042T190521.v2.0.B04.tif']\n",
+    "links[\"11\"] = ['s3://lp-prod-protected/HLSS30.020/HLS.S30.T10TEL.2023042T190521.v2.0/HLS.S30.T10TEL.2023042T190521.v2.0.B11.tif']\n",
+    "lidar_name = \"ASO_SacramentoMcCloud_2023Feb09-11_snowdepth_50m\"\n",
+    "links[\"lidar\"] = f'../data/{lidar_name}.tif'\n",
+    "# links[\"02\"] = open('../data/S3_T11SLB_B02_Links.txt').read().splitlines() # L30 and S30 for BLUE\n",
+    "# links[\"03\"] = open('../data/S3_T11SLB_B03_Links.txt').read().splitlines() # L30 and S30 for GREEN\n",
+    "# links[\"04\"] = open('../data/S3_T11SLB_B04_Links.txt').read().splitlines() # L30 and S30 for RED\n",
+    "# links[\"06\"] = open('../data/S3_T11SLB_B06_Links.txt').read().splitlines() # L30 for SWIR 1\n",
+    "# links[\"11\"] = open('../data/S3_T11SLB_B11_Links.txt').read().splitlines() # S30 for SWIR 1\n",
     "for k in links.keys():\n",
     "    print(links[k][0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 88,
    "id": "62e7bced-6008-454e-bb2c-7c87980a740a",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "hls_bands = {}\n",
-    "# hls_bands[\"S02\"] = rioxarray.open_rasterio(links[\"02\"][0], chuncks=True).squeeze('band', drop=True)\n",
-    "# hls_bands[\"S03\"] = rioxarray.open_rasterio(links[\"03\"][0], chuncks=True).squeeze('band', drop=True)\n",
-    "# hls_bands[\"S04\"] = rioxarray.open_rasterio(links[\"04\"][0], chuncks=True).squeeze('band', drop=True)\n",
-    "# hls_bands[\"S11\"] = rioxarray.open_rasterio(links[\"11\"][0], chuncks=True).squeeze('band', drop=True)\n",
-    "\n",
     "i02 = 4\n",
     "i03 = 4\n",
     "i04 = 4\n",
     "i11 = 3\n",
-    "\n",
-    "hls_bands[\"S02\"] = rioxarray.open_rasterio(links[\"02\"][i02], chuncks=True)\n",
-    "hls_bands[\"S03\"] = rioxarray.open_rasterio(links[\"03\"][i03], chuncks=True)\n",
-    "hls_bands[\"S04\"] = rioxarray.open_rasterio(links[\"04\"][i04], chuncks=True)\n",
-    "hls_bands[\"S11\"] = rioxarray.open_rasterio(links[\"11\"][i11], chuncks=True)\n",
-    "\n",
-    "# hls_bands[\"L02\"] = rioxarray.open_rasterio(links[\"02\"][2], chuncks=True).squeeze('band', drop=True)\n",
-    "# hls_bands[\"L03\"] = rioxarray.open_rasterio(links[\"03\"][2], chuncks=True).squeeze('band', drop=True)\n",
-    "# hls_bands[\"L04\"] = rioxarray.open_rasterio(links[\"04\"][2], chuncks=True).squeeze('band', drop=True)\n",
-    "# hls_bands[\"L06\"] = rioxarray.open_rasterio(links[\"06\"][0], chuncks=True).squeeze('band', drop=True)\n",
-    "\n",
-    "lidar = rioxarray.open_rasterio(\"../data/ASO_50M_SD_USCASF_20190714.tif\", chuncks=True).squeeze('band', drop=True)\n",
-    "# lidar = rioxarray.open_rasterio(\"../data/ASO_SacramentoMcCloud_2023Feb09-11_snowdepth_50m.tif\", chuncks=True).squeeze('band', drop=True)\n",
-    "lidar = lidar.where(-100 < lidar, drop=True)\n",
-    "# print(lidar)\n",
-    "# lidar.hvplot.image(x='x', y='y', cmap='coolwarm', rasterize=True, width=800, height=600, colorbar=True)"
+    "def init():\n",
+    "    hls_bands = {}\n",
+    "    \n",
+    "    hls_bands[\"S02\"] = rioxarray.open_rasterio(links[\"02\"][0], chuncks=True).squeeze('band', drop=True)\n",
+    "    hls_bands[\"S03\"] = rioxarray.open_rasterio(links[\"03\"][0], chuncks=True).squeeze('band', drop=True)\n",
+    "    hls_bands[\"S04\"] = rioxarray.open_rasterio(links[\"04\"][0], chuncks=True).squeeze('band', drop=True)\n",
+    "    hls_bands[\"S11\"] = rioxarray.open_rasterio(links[\"11\"][0], chuncks=True).squeeze('band', drop=True)\n",
+    "    \n",
+    "    attrs = hls_bands[\"S03\"].attrs\n",
+    "    \n",
+    "    # hls_bands[\"S02\"] = rioxarray.open_rasterio(links[\"02\"][i02], chuncks=True)\n",
+    "    # hls_bands[\"S03\"] = rioxarray.open_rasterio(links[\"03\"][i03], chuncks=True)\n",
+    "    # hls_bands[\"S04\"] = rioxarray.open_rasterio(links[\"04\"][i04], chuncks=True)\n",
+    "    # hls_bands[\"S11\"] = rioxarray.open_rasterio(links[\"11\"][i11], chuncks=True)\n",
+    "    \n",
+    "    # hls_bands[\"L02\"] = rioxarray.open_rasterio(links[\"02\"][2], chuncks=True).squeeze('band', drop=True)\n",
+    "    # hls_bands[\"L03\"] = rioxarray.open_rasterio(links[\"03\"][2], chuncks=True).squeeze('band', drop=True)\n",
+    "    # hls_bands[\"L04\"] = rioxarray.open_rasterio(links[\"04\"][2], chuncks=True).squeeze('band', drop=True)\n",
+    "    # hls_bands[\"L06\"] = rioxarray.open_rasterio(links[\"06\"][0], chuncks=True).squeeze('band', drop=True)\n",
+    "    \n",
+    "    # lidar = rioxarray.open_rasterio(\"../data/ASO_50M_SD_USCASF_20190714.tif\", chuncks=True).squeeze('band', drop=True)\n",
+    "    lidar = rioxarray.open_rasterio(links[\"lidar\"], chuncks=True).squeeze('band', drop=True)\n",
+    "    lidar = lidar.where(-100 < lidar, drop=True)\n",
+    "    # print(lidar)\n",
+    "    # lidar.hvplot.image(x='x', y='y', cmap='coolwarm', rasterize=True, width=800, height=600, colorbar=True)\n",
+    "    return hls_bands, attrs, lidar\n",
+    "hls_bands, attrs, lidar = init()"
    ]
   },
   {
@@ -886,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 89,
    "id": "4764a994-7b8b-4657-b4b0-23c3d3feda73",
    "metadata": {
     "tags": []
@@ -894,37 +901,40 @@
    "outputs": [],
    "source": [
     "for band in hls_bands.keys():\n",
-    "    hls_bands[band] = hls_bands[band].rio.reproject_match(lidar)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "id": "f7f33bc6-7058-4015-90cc-2c0488f78950",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
+    "    hls_bands[band] = hls_bands[band].rio.reproject_match(lidar)\n",
+    "\n",
+    "thresholded = lidar.where(0.1 < lidar)\n",
+    "hls_bands[\"S03\"].attrs = attrs\n",
+    "thresholded = thresholded.rio.reproject_match(hls_bands[\"S03\"])\n",
+    "\n",
     "for band in hls_bands.keys():\n",
     "    hls_bands[band] = hls_bands[band].values.flatten()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "id": "60c5e50d-63f2-4147-92a8-bb5c3ace5e88",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
+   "execution_count": 90,
+   "id": "cf4fcaf0-79d2-48ea-bca9-9d6f1b798060",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1769, 1452)\n",
+      "(1769, 1452)\n"
+     ]
+    }
+   ],
    "source": [
-    "thresholded = lidar.where(0.1 < lidar)"
+    "# Confirm the shape is OK\n",
+    "print(thresholded.shape)\n",
+    "print(hls_bands[\"S03\"].reshape(thresholded.shape).shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 91,
    "id": "8c04eee4-a27a-49c0-837b-87c6dfca421f",
    "metadata": {
     "tags": []
@@ -944,7 +954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 92,
    "id": "178fe3ca-7613-497d-bcb9-f4839207508f",
    "metadata": {
     "tags": []
@@ -957,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 93,
    "id": "1cb4fb2e-4bc4-4f34-bed5-4785d8c586ce",
    "metadata": {
     "tags": []
@@ -985,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 97,
    "id": "63bc5f10-8f68-4487-8556-4c873cf6ee49",
    "metadata": {
     "tags": []
@@ -1003,13 +1013,13 @@
     "labels = [\"Blue\", \"Green\", \"Red\", \"Truth\"]\n",
     "data = np.column_stack((hls_bands[\"S02\"], hls_bands[\"S03\"], \\\n",
     "                        hls_bands[\"S04\"], linear_lidar_filtered))\n",
-    "write_to_csv(labels, data)\n",
+    "write_to_csv(labels, data, file_name=f'filtered{lidar_name}.csv')\n",
     "print(\"Done exporting data\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 98,
    "id": "e8310c06-5bb5-4b85-97a6-bb0ccfc3e567",
    "metadata": {},
    "outputs": [
@@ -1024,26 +1034,31 @@
    "source": [
     "labels = [\"Blue\", \"Green\", \"Red\", \"Truth\"]\n",
     "\n",
-    "hls_bands[\"S02\"] = rioxarray.open_rasterio(links[\"02\"][i02], chuncks=True).squeeze('band', drop=True)\n",
-    "hls_bands[\"S03\"] = rioxarray.open_rasterio(links[\"03\"][i03], chuncks=True).squeeze('band', drop=True)\n",
-    "hls_bands[\"S04\"] = rioxarray.open_rasterio(links[\"04\"][i04], chuncks=True).squeeze('band', drop=True)\n",
-    "hls_bands[\"S11\"] = rioxarray.open_rasterio(links[\"11\"][i11], chuncks=True).squeeze('band', drop=True)\n",
+    "hls_bands, attrs, lidar = init()\n",
     "\n",
     "for band in hls_bands.keys():\n",
     "    hls_bands[band] = hls_bands[band].rio.reproject_match(lidar)\n",
+    "\n",
+    "thresholded = lidar.where(0.1 < lidar)\n",
+    "hls_bands[\"S03\"].attrs = attrs\n",
+    "thresholded = thresholded.rio.reproject_match(hls_bands[\"S03\"])\n",
+    "\n",
     "for band in hls_bands.keys():\n",
     "    hls_bands[band] = hls_bands[band].values.flatten()\n",
     "\n",
+    "baseline = lidar.values.flatten()\n",
+    "linear_lidar = thresholded.values.flatten()\n",
     "filter_post(linear_lidar)\n",
     "whole_lidar_filtered = linear_lidar.astype(int)\n",
+    "\n",
     "data = np.column_stack((hls_bands[\"S02\"], hls_bands[\"S03\"], hls_bands[\"S04\"], whole_lidar_filtered))\n",
-    "write_to_csv(labels, data, file_name=\"whole_image.csv\")\n",
+    "write_to_csv(labels, data, file_name=f'whole{lidar_name}.csv')\n",
     "print(\"Done exporting whole image\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 99,
    "id": "4d21bbc6-9cab-4187-9c37-9dd9214a0846",
    "metadata": {},
    "outputs": [
@@ -1051,17 +1066,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(721392,)\n",
-      "(912, 791)\n",
-      "(721392,)\n"
+      "(2568588,)\n",
+      "(1769, 1452)\n",
+      "(2568588,)\n"
      ]
     }
    ],
    "source": [
-    "test = rioxarray.open_rasterio(\"../data/ASO_50M_SD_USCASF_20190714.tif\", chuncks=True).squeeze('band', drop=True).where(-100 < lidar, drop=True).where(0.1 < lidar)\n",
     "print(whole_lidar_filtered.shape)\n",
-    "print(test.values.shape)\n",
-    "print(test.values.flatten().shape)"
+    "print(thresholded.values.shape)\n",
+    "print(thresholded.values.flatten().shape)"
    ]
   },
   {
