More organization, + extracted data names into data_names.py

--- a/Code/RF_data_preparation.ipynb
+++ b/Code/RF_data_preparation.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 148,
    "id": "dc4bead5-8380-43a3-9d6d-4480cd432a58",
    "metadata": {
     "tags": []
@@ -744,7 +744,8 @@
     "import hvplot.xarray\n",
     "import holoviews as hv\n",
     "import csv\n",
-    "gv.extension('bokeh', 'matplotlib')"
+    "gv.extension('bokeh', 'matplotlib')\n",
+    "%run -i 'data_names.py'"
    ]
   },
   {
@@ -760,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 149,
    "id": "09197c0e-bb94-439a-a029-c12031a6493a",
    "metadata": {
     "tags": []
@@ -769,10 +770,10 @@
     {
      "data": {
       "text/plain": [
-       "<rasterio.env.Env at 0x7f56e32e7110>"
+       "<rasterio.env.Env at 0x7f56e45f2210>"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -806,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 150,
    "id": "df5cba45-01ba-4cd4-b82a-3aa6f509daae",
    "metadata": {
     "tags": []
@@ -816,34 +817,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "s3://lp-prod-protected/HLSS30.020/HLS.S30.T10TEL.2023042T190521.v2.0/HLS.S30.T10TEL.2023042T190521.v2.0.B02.tif\n",
-      "s3://lp-prod-protected/HLSS30.020/HLS.S30.T10TEL.2023042T190521.v2.0/HLS.S30.T10TEL.2023042T190521.v2.0.B03.tif\n",
-      "s3://lp-prod-protected/HLSS30.020/HLS.S30.T10TEL.2023042T190521.v2.0/HLS.S30.T10TEL.2023042T190521.v2.0.B04.tif\n",
-      "s3://lp-prod-protected/HLSS30.020/HLS.S30.T10TEL.2023042T190521.v2.0/HLS.S30.T10TEL.2023042T190521.v2.0.B11.tif\n",
+      "s3://lp-prod-protected/HLSS30.020/HLS.S30.T10TEL.2023137T185919.v2.0/HLS.S30.T10TEL.2023137T185919.v2.0.B02.tif\n",
+      "s3://lp-prod-protected/HLSS30.020/HLS.S30.T10TEL.2023137T185919.v2.0/HLS.S30.T10TEL.2023137T185919.v2.0.B03.tif\n",
+      "s3://lp-prod-protected/HLSS30.020/HLS.S30.T10TEL.2023137T185919.v2.0/HLS.S30.T10TEL.2023137T185919.v2.0.B04.tif\n",
+      "s3://lp-prod-protected/HLSS30.020/HLS.S30.T10TEL.2023137T185919.v2.0/HLS.S30.T10TEL.2023137T185919.v2.0.B11.tif\n",
       ".\n"
      ]
     }
    ],
    "source": [
     "links = {}\n",
-    "links[\"02\"] = ['s3://lp-prod-protected/HLSS30.020/HLS.S30.T10TEL.2023042T190521.v2.0/HLS.S30.T10TEL.2023042T190521.v2.0.B02.tif']\n",
-    "links[\"03\"] = ['s3://lp-prod-protected/HLSS30.020/HLS.S30.T10TEL.2023042T190521.v2.0/HLS.S30.T10TEL.2023042T190521.v2.0.B03.tif']\n",
-    "links[\"04\"] = ['s3://lp-prod-protected/HLSS30.020/HLS.S30.T10TEL.2023042T190521.v2.0/HLS.S30.T10TEL.2023042T190521.v2.0.B04.tif']\n",
-    "links[\"11\"] = ['s3://lp-prod-protected/HLSS30.020/HLS.S30.T10TEL.2023042T190521.v2.0/HLS.S30.T10TEL.2023042T190521.v2.0.B11.tif']\n",
-    "lidar_name = \"ASO_SacramentoMcCloud_2023Feb09-11_snowdepth_50m\"\n",
+    "\n",
+    "links[\"02\"] = [f's3://lp-prod-protected/HLSS30.020/{region}/{region}.B02.tif']\n",
+    "links[\"03\"] = [f's3://lp-prod-protected/HLSS30.020/{region}/{region}.B03.tif']\n",
+    "links[\"04\"] = [f's3://lp-prod-protected/HLSS30.020/{region}/{region}.B04.tif']\n",
+    "links[\"11\"] = [f's3://lp-prod-protected/HLSS30.020/{region}/{region}.B11.tif']\n",
     "links[\"lidar\"] = f'../data/{lidar_name}.tif'\n",
-    "# links[\"02\"] = open('../data/S3_T11SLB_B02_Links.txt').read().splitlines() # L30 and S30 for BLUE\n",
-    "# links[\"03\"] = open('../data/S3_T11SLB_B03_Links.txt').read().splitlines() # L30 and S30 for GREEN\n",
-    "# links[\"04\"] = open('../data/S3_T11SLB_B04_Links.txt').read().splitlines() # L30 and S30 for RED\n",
-    "# links[\"06\"] = open('../data/S3_T11SLB_B06_Links.txt').read().splitlines() # L30 for SWIR 1\n",
-    "# links[\"11\"] = open('../data/S3_T11SLB_B11_Links.txt').read().splitlines() # S30 for SWIR 1\n",
+    "\n",
     "for k in links.keys():\n",
     "    print(links[k][0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 151,
    "id": "62e7bced-6008-454e-bb2c-7c87980a740a",
    "metadata": {
     "tags": []
@@ -893,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 152,
    "id": "4764a994-7b8b-4657-b4b0-23c3d3feda73",
    "metadata": {
     "tags": []
@@ -913,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 153,
    "id": "cf4fcaf0-79d2-48ea-bca9-9d6f1b798060",
    "metadata": {},
    "outputs": [
@@ -921,8 +918,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1769, 1452)\n",
-      "(1769, 1452)\n"
+      "(1701, 1453)\n",
+      "(1701, 1453)\n"
      ]
     }
    ],
@@ -934,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 154,
    "id": "8c04eee4-a27a-49c0-837b-87c6dfca421f",
    "metadata": {
     "tags": []
@@ -954,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 155,
    "id": "178fe3ca-7613-497d-bcb9-f4839207508f",
    "metadata": {
     "tags": []
@@ -967,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 156,
    "id": "1cb4fb2e-4bc4-4f34-bed5-4785d8c586ce",
    "metadata": {
     "tags": []
@@ -995,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 157,
    "id": "63bc5f10-8f68-4487-8556-4c873cf6ee49",
    "metadata": {
     "tags": []
@@ -1019,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 158,
    "id": "e8310c06-5bb5-4b85-97a6-bb0ccfc3e567",
    "metadata": {},
    "outputs": [
@@ -1058,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 159,
    "id": "4d21bbc6-9cab-4187-9c37-9dd9214a0846",
    "metadata": {},
    "outputs": [
@@ -1066,9 +1063,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(2568588,)\n",
-      "(1769, 1452)\n",
-      "(2568588,)\n"
+      "(2471553,)\n",
+      "(1701, 1453)\n",
+      "(2471553,)\n"
      ]
     }
    ],
