--- a/Code/RF_data_preparation.ipynb
+++ b/Code/RF_data_preparation.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 6,
    "id": "dc4bead5-8380-43a3-9d6d-4480cd432a58",
    "metadata": {
     "tags": []
@@ -761,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 7,
    "id": "09197c0e-bb94-439a-a029-c12031a6493a",
    "metadata": {
     "tags": []
@@ -770,10 +770,10 @@
     {
      "data": {
       "text/plain": [
-       "<rasterio.env.Env at 0x7f56e45f2210>"
+       "<rasterio.env.Env at 0x7fd0e0360b10>"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -807,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 8,
    "id": "df5cba45-01ba-4cd4-b82a-3aa6f509daae",
    "metadata": {
     "tags": []
@@ -817,10 +817,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "s3://lp-prod-protected/HLSS30.020/HLS.S30.T10TEL.2023137T185919.v2.0/HLS.S30.T10TEL.2023137T185919.v2.0.B02.tif\n",
-      "s3://lp-prod-protected/HLSS30.020/HLS.S30.T10TEL.2023137T185919.v2.0/HLS.S30.T10TEL.2023137T185919.v2.0.B03.tif\n",
-      "s3://lp-prod-protected/HLSS30.020/HLS.S30.T10TEL.2023137T185919.v2.0/HLS.S30.T10TEL.2023137T185919.v2.0.B04.tif\n",
-      "s3://lp-prod-protected/HLSS30.020/HLS.S30.T10TEL.2023137T185919.v2.0/HLS.S30.T10TEL.2023137T185919.v2.0.B11.tif\n",
+      "s3://lp-prod-protected/HLSS30.020/HLS.S30.T10TEL.2023114T184919.v2.0/HLS.S30.T10TEL.2023114T184919.v2.0.B02.tif\n",
+      "s3://lp-prod-protected/HLSS30.020/HLS.S30.T10TEL.2023114T184919.v2.0/HLS.S30.T10TEL.2023114T184919.v2.0.B03.tif\n",
+      "s3://lp-prod-protected/HLSS30.020/HLS.S30.T10TEL.2023114T184919.v2.0/HLS.S30.T10TEL.2023114T184919.v2.0.B04.tif\n",
+      "s3://lp-prod-protected/HLSS30.020/HLS.S30.T10TEL.2023114T184919.v2.0/HLS.S30.T10TEL.2023114T184919.v2.0.B11.tif\n",
       ".\n"
      ]
     }
@@ -840,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 9,
    "id": "62e7bced-6008-454e-bb2c-7c87980a740a",
    "metadata": {
     "tags": []
@@ -890,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 10,
    "id": "4764a994-7b8b-4657-b4b0-23c3d3feda73",
    "metadata": {
     "tags": []
@@ -910,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 11,
    "id": "cf4fcaf0-79d2-48ea-bca9-9d6f1b798060",
    "metadata": {},
    "outputs": [
@@ -918,8 +918,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1701, 1453)\n",
-      "(1701, 1453)\n"
+      "(1765, 1452)\n",
+      "(1765, 1452)\n"
      ]
     }
    ],
@@ -931,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 12,
    "id": "8c04eee4-a27a-49c0-837b-87c6dfca421f",
    "metadata": {
     "tags": []
@@ -951,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 13,
    "id": "178fe3ca-7613-497d-bcb9-f4839207508f",
    "metadata": {
     "tags": []
@@ -964,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 14,
    "id": "1cb4fb2e-4bc4-4f34-bed5-4785d8c586ce",
    "metadata": {
     "tags": []
@@ -992,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 15,
    "id": "63bc5f10-8f68-4487-8556-4c873cf6ee49",
    "metadata": {
     "tags": []
@@ -1016,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 16,
    "id": "e8310c06-5bb5-4b85-97a6-bb0ccfc3e567",
    "metadata": {},
    "outputs": [
@@ -1055,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 17,
    "id": "4d21bbc6-9cab-4187-9c37-9dd9214a0846",
    "metadata": {},
    "outputs": [
@@ -1063,9 +1063,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(2471553,)\n",
-      "(1701, 1453)\n",
-      "(2471553,)\n"
+      "(2562780,)\n",
+      "(1765, 1452)\n",
+      "(2562780,)\n"
      ]
     }
    ],
