Doing lots of things

--- a/Code/RF_data_preparation.ipynb
+++ b/Code/RF_data_preparation.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 59,
    "id": "dc4bead5-8380-43a3-9d6d-4480cd432a58",
    "metadata": {
     "tags": []
@@ -761,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 60,
    "id": "09197c0e-bb94-439a-a029-c12031a6493a",
    "metadata": {
     "tags": []
@@ -770,10 +770,10 @@
     {
      "data": {
       "text/plain": [
-       "<rasterio.env.Env at 0x7fd0e0360b10>"
+       "<rasterio.env.Env at 0x7f649d393050>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -807,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 61,
    "id": "df5cba45-01ba-4cd4-b82a-3aa6f509daae",
    "metadata": {
     "tags": []
@@ -840,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 62,
    "id": "62e7bced-6008-454e-bb2c-7c87980a740a",
    "metadata": {
     "tags": []
@@ -890,27 +890,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 63,
    "id": "4764a994-7b8b-4657-b4b0-23c3d3feda73",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3660, 3660)\n"
+     ]
+    }
+   ],
    "source": [
-    "for band in hls_bands.keys():\n",
-    "    hls_bands[band] = hls_bands[band].rio.reproject_match(lidar)\n",
-    "\n",
-    "thresholded = lidar.where(0.1 < lidar)\n",
-    "hls_bands[\"S03\"].attrs = attrs\n",
-    "thresholded = thresholded.rio.reproject_match(hls_bands[\"S03\"])\n",
-    "\n",
-    "for band in hls_bands.keys():\n",
-    "    hls_bands[band] = hls_bands[band].values.flatten()"
+    "reproj_lidar = lidar.rio.reproject_match(hls_bands[\"S03\"])\n",
+    "print(reproj_lidar.shape)\n",
+    "reproj_lidar = reproj_lidar.where(0.1 < reproj_lidar)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 64,
    "id": "cf4fcaf0-79d2-48ea-bca9-9d6f1b798060",
    "metadata": {},
    "outputs": [
@@ -919,27 +921,29 @@
      "output_type": "stream",
      "text": [
       "(1765, 1452)\n",
-      "(1765, 1452)\n"
+      "(3660, 3660)\n",
+      "(3660, 3660)\n"
      ]
     }
    ],
    "source": [
-    "# Confirm the shape is OK\n",
-    "print(thresholded.shape)\n",
-    "print(hls_bands[\"S03\"].reshape(thresholded.shape).shape)"
+    "# # Confirm the shape is OK\n",
+    "print(lidar.shape)\n",
+    "print(reproj_lidar.shape)\n",
+    "print(hls_bands[\"S03\"].shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 65,
    "id": "8c04eee4-a27a-49c0-837b-87c6dfca421f",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "baseline = lidar.values.flatten()\n",
-    "linear_lidar = thresholded.values.flatten()\n",
+    "baseline = lidar.where(-999 < lidar).rio.reproject_match(hls_bands[\"S03\"]).values.flatten()\n",
+    "linear_lidar = reproj_lidar.values.flatten()\n",
     "valid = ~np.isnan(baseline)\n",
     "linear_lidar_filtered = linear_lidar[valid]\n",
     "def filter_post(arr):\n",
@@ -951,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 66,
    "id": "178fe3ca-7613-497d-bcb9-f4839207508f",
    "metadata": {
     "tags": []
@@ -959,12 +963,13 @@
    "outputs": [],
    "source": [
     "for band in hls_bands.keys():\n",
+    "    hls_bands[band] = hls_bands[band].values.flatten()\n",
     "    hls_bands[band] = hls_bands[band][valid]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 67,
    "id": "1cb4fb2e-4bc4-4f34-bed5-4785d8c586ce",
    "metadata": {
     "tags": []
@@ -992,7 +997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 68,
    "id": "63bc5f10-8f68-4487-8556-4c873cf6ee49",
    "metadata": {
     "tags": []
@@ -1016,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 69,
    "id": "e8310c06-5bb5-4b85-97a6-bb0ccfc3e567",
    "metadata": {},
    "outputs": [
@@ -1055,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 70,
    "id": "4d21bbc6-9cab-4187-9c37-9dd9214a0846",
    "metadata": {},
    "outputs": [
@@ -1100,7 +1105,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
